--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "jest"
+    "test": "mocha 'test/**/*.js'"
   },
   "dependencies": {
+    "chai": "^4.2.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
@@ -18,9 +19,13 @@
     "multer": "^1.4.2",
     "mysql2": "^2.2.5",
     "pg": "^8.4.1",
-    "sequelize": "^6.3.5"
+    "proxyquire": "^2.1.3",
+    "sequelize": "^6.3.5",
+    "sinon": "^9.2.0"
   },
   "devDependencies": {
-    "jest": "^26.5.2"
+    "jest": "^26.5.2",
+    "mocha": "^8.1.3",
+    "sequelize-test-helpers": "^1.3.2"
   }
 }
