--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "jest": "^26.5.2",
     "mocha": "^8.1.3",
-    "sequelize-test-helpers": "^1.3.2"
+    "sequelize-test-helpers": "^1.3.2",
+    "supertest": "^5.0.0"
   }
 }
