--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
-    "fast-csv": "^4.3.2",
     "he": "^1.2.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
@@ -24,9 +23,7 @@
     "sinon": "^9.2.0"
   },
   "devDependencies": {
-    "jest": "^26.5.2",
     "mocha": "^8.1.3",
-    "sequelize-test-helpers": "^1.3.2",
-    "supertest": "^5.0.0"
+    "sequelize-test-helpers": "^1.3.2"
   }
 }
